fixed loading z-index

--- a/public/loading.css
+++ b/public/loading.css
@@ -20,6 +20,7 @@
   justify-content: center;
   align-items: center;
   background-color: #121212;
+  z-index: 10000;
   opacity: 1;
   visibility: visible;
   transition: all 0.6s step-end;
